--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -265,7 +265,7 @@ padding-bottom: 50px;
     }
 
 
-    .nk-isotope-item:hover .hovera{
+    /* .nk-isotope-item:hover .hovera{
         background-image: url('../images/adopet-min.jpg') !important;
         background-size: cover;
         background-position: center;
@@ -338,7 +338,7 @@ padding-bottom: 50px;
         background-image: url('../images/smd-min.jpg') !important;
         background-size: cover;
         background-position: center;
-    }
+    } */
 
 
 
