--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -151,6 +151,8 @@ padding-bottom: 50px;
         font-size: 4rem;
         font-weight: 900;
         display: block;
+        padding-top: 5%;
+        padding-bottom: 5%;
     }
 
     .year{
