--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -176,7 +176,8 @@ padding-bottom: 50px;
         /* background-attachment: fixed;
         background-size: 500%;
         background-repeat:no-repeat; */
-        font-weight: 500;
+        font-weight: 600;
+        border:3px solid var(--year-color);
     }
 
     .nk-isotope-filter li{
@@ -415,6 +416,27 @@ padding-bottom: 50px;
             background-size: 200%;
         
         }
+
+        .nk-isotope-filter li{
+           margin-bottom: 2%;
+        }
+
+        
+    .title-port h2{
+        background-size: 150%;
+        font-size: 3rem;
+        font-weight: 900;
+        display: block;
+        padding-top: 20%;
+        padding-bottom: 10%;
+    }
+
+    
+    .nk-footer{
+
+padding-top: 25%;
+padding-bottom: 20%;
+    }
 
       
     }
